# generate3D

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
Assets/output-network/: output.txt
Assets/shapenet-voxelized-gt/02747177/: 85d8a1ad55fa646878725384d6baf445__0__.df  85d8a1ad55fa646878725384d6baf445__0__.txt
Assets/shapenet-voxelized-gt/02828884/: 1a40eaf5919b1b3f3eaa2b95b99dae6__0__.df  1a40eaf5919b1b3f3eaa2b95b99dae6__0__.txt
Assets/shapenet-voxelized-gt/03001627/: 235c8ef29ef5fc5bafd49046c1129780__0__.df  235c8ef29ef5fc5bafd49046c1129780__0__.txt  2c03bcb2a133ce28bb6caad47eee6580__0__.df  2c03bcb2a133ce28bb6caad47eee6580__0__.txt  b4371c352f96c4d5a6fee8e2140acec9__0__.df  b4371c352f96c4d5a6fee8e2140acec9__0__.txt  bdc892547cceb2ef34dedfee80b7006__0__.df  bdc892547cceb2ef34dedfee80b7006__0__.txt
Assets/shapenet-voxelized-gt/04379243/: 142060f848466cad97ef9a13efb5e3f7__0__.df  142060f848466cad97ef9a13efb5e3f7__0__.txt
src/: mLibInclude.cpp  mLibInclude.h  main.cpp
src/Base/: tiny_obj_loader.cpp  tinyply.cpp  tinyply.h  voxel_loader.h
src/dfgen/: dfgen.cpp  dfgen.h  main.cpp  makefile
src/lib/: camera.py  check.py  config.py  generate_data.py  image.py  image_classifier.py  layers.py  model.py  parameters.json  raycast_again.py  raycasting.py  raytracing.py  read_mesh.py  renderer.py  renderer_pyrender.py  renderer_trimesh.py  test.py  trainer.py  voxel_grid.py
src/lib/.ipynb_checkpoints/: config-checkpoint.ipynb  generate_data-checkpoint.ipynb  image_classifier-checkpoint.ipynb  image_processing-checkpoint.ipynb  model-checkpoint.ipynb  raycasting-checkpoint.ipynb  voxel_grid-checkpoint.ipynb
src/scripts/: CADVoxelization.py  JSONHelper.py  camera.py  chinmay.py  config.py  failed_cases.json  generate_data.ipynb  generate_rainbow.py  generate_sdf.py  model.py  occ_to_df.py  parameters.json  raytracing.py  raytracing_approach1.py  raytracing_color.py  raytracing_cp.py  raytracing_cp2.py  raytracing_cp3.py  raytracing_cp4.py  raytracing_cp5.py  read_sdf.py  renderer.py  renderer_cp.py  renderer_trimesh.py  test.py  trainer.py  visualized_sdf.py  voxel_grid.py  voxelize_colored_models.py  voxelize_colored_raymarching.py  voxelize_mesh.ipynb
src/scripts/.ipynb_checkpoints/: export_camera_params-checkpoint.ipynb  generate_data-checkpoint.ipynb  voxelize_mesh-checkpoint.ipynb
src/scripts/Network/: conv_autoencoder.py  data_formats.py  data_utils.py  data_utils_2.py  dataset_handler.py  dataset_loader.py  eval_metric.py  evaluate_model.py  layers.py  lets_start_again.py  losses.py  model.py  model_proj_layer.py  old_trainer.py  perspective_projection.py  perspective_projection_approach1.py  test.py  trainer.py  (+12 more)
src/utils/: LoaderMesh.h  LoaderVOX.h  camera.cpp  camera.h  global_structs.h  globals.h  image.cpp  image.h  mesh_loader.h  tiny_obj_loader.h  voxelize.cpp  voxelize.h
src/vox2mesh/: main.cpp  makefile  vox2mesh.cpp  vox2mesh.h
(+17 files in other folders)
